# ouroboros

./: CLAUDE.md  pyproject.toml
.claude-plugin/: plugin.json
agents/: socratic-interviewer.md
skills/interview/: SKILL.md
src/ouroboros/: __init__.py
src/ouroboros/agents/: socratic-interviewer.md
src/ouroboros/bigbang/: explore.py  interview.py
src/ouroboros/core/: file_lock.py
src/ouroboros/evolution/: convergence.py
src/ouroboros/mcp/tools/: definitions.py
src/ouroboros/persistence/: checkpoint.py
src/ouroboros/plugin/state/: store.py
tests/unit/: test_convergence.py
tests/unit/bigbang/: test_explore.py  test_interview.py
tests/unit/mcp/tools/: test_definitions.py
